<resources>
    <string name="app_name">css390_arapp</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome CSS390!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="locationTextV">Location</string>
    <string name="getlocationTextV">GetLocation</string>
    <string name="TimeView">TextView</string>
    <string name="timeTextDisplay">TimeView</string>
    <string name="timeDisplayText">TextView</string>
    <string name="timedisplaytext">timeDisplayText</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="select_photo">Select Photo</string>
    <string name="getandsend">GetAndSend</string>
    <string name="camera_permission_toast">Camera permission is needed to run this application</string>
    <string name="searching_for_surfaces">Searching for surfaces…</string>
    <string name="ar_device_support">This device does not support AR</string>
    <string name="depth_use_explanation" translatable="false">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
    <string name="button_text_enable_depth" translatable="false">Enable</string>
    <string name="button_text_disable_depth" translatable="false">Disable</string>
    <string name="options_title_with_depth" translatable="false">Your device supports depth</string>
    <string name="options_title_without_depth" translatable="false">Your device does not support depth</string>
    <string name="done" translatable="false">Done</string>
    <string-array name="depth_options_array" translatable="false">
        <item>Enable depth</item>
        <item>Show depth map</item>
    </string-array>
    <string name="options_title_instant_placement" translatable="false">Instant Placement options</string>
    <string-array name="instant_placement_options_array" translatable="false">
        <item>Enable Instant Placement</item>
    </string-array>
</resources>