<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nameRegister_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/emailRegister_textview"
        app:layout_constraintEnd_toEndOf="@+id/emailRegister_textview"
        app:layout_constraintStart_toStartOf="@+id/emailRegister_textview" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegister_textview" />

    <Button
        android:id="@+id/selectPhotoRegister_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/rounded_select_photo_button"
        android:text="@string/select_photo"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/selectPhotoRegister_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/selectPhotoRegister_imageview" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectPhotoRegister_imageview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="30dp"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toTopOf="@+id/nameRegister_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordRegister_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_button"
        app:layout_constraintStart_toStartOf="@+id/register_button"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailRegister_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegister_textview"
        app:layout_constraintEnd_toEndOf="@+id/passwordRegister_textview"
        app:layout_constraintStart_toStartOf="@+id/passwordRegister_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>